# fastapi-celery

./: docker-compose-services.yml  docker-compose.yml  pyproject.toml
